--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -901,6 +901,7 @@ footer {
 		display: -webkit-flex;
 		flex-wrap: wrap;
 		-webkit-flex-wrap: wrap;
+/* 		align-content: center; */
 	}
 	.itemDesktop {
 		display: none;
@@ -910,9 +911,24 @@ footer {
 		-webkit-flex: 0 0 20%;
 		cursor: pointer;
 		line-height: 1.5em;
-		margin-left: auto;
 		margin-right: 0.5em;
 	}
+	
+	#listings .locationMobile {
+		flex: 0 0 80%;
+		-webkit-flex: 0 0 80%;
+		cursor: pointer;
+		margin-right: 0.5em;
+		text-align: center;
+	}
+	
+	#listings .col-icon {
+		flex: 0 0 10%;
+		-webkit-flex: 0 0 10%;
+		cursor: pointer;
+		margin-right: 0.5em;
+	}
+	
 	#listings .adminButton {
     	flex: 0 0 10%;
     	-webkit-flex: 0 0 10%;
